Corrigindo bugs da section topo

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <a class="navbar-brand" href="index.html">
-        <img src="/assets/images/Logo.png" class="d-inline-block align-top img-fluid" alt="">
+        <img src="assets/images/Logo.png" class="d-inline-block align-top img-fluid" alt="">
       </a>
       <button style="z-index: 1030" id="m-hamburger" class="hamburger hamburger--squeeze" type="button"
         data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false"
@@ -444,7 +444,7 @@
     <!--  -- // --  -->
 
     <div class="grid-container">
-      <div class="topo-chamada" data-aos="fade-up" data-aos-duration="2000" data-aos-anchor-placement="top-center">
+      <div class="topo-chamada">
         <h1><strong>Nosso foco,<br> sua auto estima</strong></h1>
         <p>
           Cirurgia de transplante<br> capilar fio a fio com a técnica de <strong>FUE</strong>.
