Corrigindo pequenos erros de design

--- a/index.html
+++ b/index.html
@@ -444,11 +444,13 @@
     <!--  -- // --  -->
 
     <div class="grid-container">
-      <div class="topo-chamada">
-        <h1><strong>Nosso foco,<br> sua auto estima</strong></h1>
-        <p>
-          Cirurgia de transplante<br> capilar fio a fio com a técnica de <strong>FUE</strong>.
-        </p>
+      <div class="wrapper-chamada">
+        <div class="topo-chamada">
+          <h1><strong>Nosso foco,<br> sua auto estima</strong></h1>
+          <p>
+            Cirurgia de transplante<br> capilar fio a fio com a técnica de <strong>FUE</strong>.
+          </p>
+        </div>
       </div>
       <div class="topo-wzap">
         <a href="">
@@ -463,14 +465,14 @@
   <main class="main" role="main">
     <!-- // sobre -->
     <section class="sobre">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col-lg-2">
           </div>
-          <div class="col-lg-4 sobre-img">
+          <div class="col-xl-4 col-lg-3 sobre-img">
             <img src="assets/images/QuemSomos/Doutor.png" alt="">
           </div>
-          <div class="col-lg-5 sobre-texto" data-aos-anchor-placement="top" data-aos="fade-up" data-aos-duration="1000"">
+          <div class="col-lg-6 sobre-texto" data-aos-anchor-placement="top" data-aos="fade-up" data-aos-duration="1000"">
             <div class=" titulo">
             <h3>Garantia de Exelencia</h3>
             <h1>Quem somos</h1>
@@ -479,69 +481,63 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed iaculis elit ornare erat pretium luctus.
             In id volutpat dui, ac rutrum massa. Sed sagittis metus
-            ut felis ornare luctus. Etiam fringilla nibh nibh,
-            eu lobortis elit commodo et.
-          </p>
-          <p>
+            <br><br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Sed iaculis elit ornare erat pretium luctus.
+            <br><br>
             In id volutpat dui, ac rutrum massa. Sed sagittis metus
             ut felis ornare luctus. Etiam fringilla nibh nibh,
-            eu lobortis elit commodo et.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Sed iaculis elit ornare erat pretium luctus.
+            eu lobortis elit commodo et.In id volutpat dui, ac rutrum massa. Sed sagittis metus
+            <br><br>
             In id volutpat dui, ac rutrum massa. Sed sagittis metus
             ut felis ornare luctus. Etiam fringilla nibh nibh,
             eu lobortis elit commodo et.
           </p>
         </div>
-      </div>
       </div>
       </div>
     </section>
     <!-- // topo -->
     <!-- // tecnica -->
     <section class="tecnica gap-padrao">
-      <div class="titulo invertido" data-aos-anchor-placement="top-center" data-aos="fade-up" data-aos-duration="2000">
-        <h3>Caracteristicas</h3>
-        <h1>Técnica FUE</h1>
-      </div>
-      <div class="container tecnica-itens">
-        <div class="row">
-          <div class="col-md-4 tecnica-item">
-            <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
-            <p>Cirurgia sem<br>Cicatriz Linear</p>
+      <div class="container">
+        <div class="titulo invertido" data-aos-anchor-placement="top-center" data-aos="fade-up"
+          data-aos-duration="2000">
+          <h3>Caracteristicas</h3>
+          <h1>Técnica FUE</h1>
+        </div>
+        <div class="tecnica-itens">
+          <div class="row">
+            <div class="col-md-4 tecnica-item">
+              <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
+              <p>Cirurgia sem<br>Cicatriz Linear</p>
+            </div>
+            <div class="col-md-4 tecnica-item">
+              <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
+              <p>Cirurgia sem<br>Cicatriz Linear</p>
+            </div>
+            <div class="col-md-4 tecnica-item">
+              <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
+              <p>Cirurgia sem<br>Cicatriz Linear</p>
+            </div>
+            <div class="col-md-4 tecnica-item">
+              <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
+              <p>Cirurgia sem<br>Cicatriz Linear</p>
+            </div>
+            <div class="col-md-4 tecnica-item">
+              <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
+              <p>Cirurgia sem<br>Cicatriz Linear</p>
+            </div>
           </div>
-          <div class="col-md-4 tecnica-item">
-            <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
-            <p>Cirurgia sem<br>Cicatriz Linear</p>
-          </div>
-          <div class="col-md-4 tecnica-item">
-            <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
-            <p>Cirurgia sem<br>Cicatriz Linear</p>
+          <div class="tecnica-btn-wrapper">
+            <a class="tecnica-btn" href="">SAIBA MAIS</a>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 tecnica-item">
-            <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
-            <p>Cirurgia sem<br>Cicatriz Linear</p>
-          </div>
-          <div class="col-md-6 tecnica-item">
-            <img src="assets/images/Tecnicas/Certo.png" alt="" srcset="">
-            <p>Cirurgia sem<br>Cicatriz Linear</p>
-          </div>
-        </div>
-        <div class="tecnica-btn-wrapper">
-          <a class="tecnica-btn" href="">SAIBA MAIS</a>
-        </div>
-      </div>
       </div>
     </section>
     <!-- // tecnica -->
     <!-- Banner video -->
-    <section class="banner gap-padrao">
+    <section class="banner">
       <!-- carrega banner mobile -- Back-end precisa criar um campo para imagem mobile -->
       <i class="v-mobile"></i>
       <i class="v-mobile" style="background-image: url('assets/images/Video/Fundo.png')" data-aos="fade-up"></i>
@@ -565,14 +561,17 @@
     <!-- // Banner video -->
     <!-- // Nosso espaço -->
     <section class="espaco gap-padrao">
-      <div class="titulo invertido" data-aos-anchor-placement="top-center" data-aos="fade-up" data-aos-duration="2000">
-        <h3>Conheça</h3>
-        <h1>Nosso Espaço</h1>
-      </div>
-      <div id="espaco-wrapper">
-        <div id="espaco-item1"></div>
-        <div id="espaco-item2"></div>
-        <div id="espaco-item3"></div>
+      <div class="container">
+        <div class="titulo invertido" data-aos-anchor-placement="top-center" data-aos="fade-up"
+          data-aos-duration="2000">
+          <h3>Conheça</h3>
+          <h1>Nosso Espaço</h1>
+        </div>
+        <div id="espaco-wrapper">
+          <img id="espaco-item1" src="assets/images/Espaço/Imagem3.png" alt="" srcset="">
+          <img id="espaco-item2" src="assets/images/Espaço/Imagem2.png" alt="" srcset="">
+          <img id="espaco-item3" src="assets/images/Espaço/Imagem1.png" alt="" srcset="">
+        </div>
       </div>
     </section>
     <!-- // Nosso espaço -->
@@ -587,7 +586,7 @@
             </div>
             <div class="row depoimentos-slider">
               <div class="swiper-wrapper">
-                <div class="col-md-4 d-flex swiper-slide">
+                <div class="col-lg-4 col-md-6 d-flex swiper-slide">
                   <div class="depoimento-card">
                     <div class="depoimento-card-conteudo">
                       <img src="assets/images/Depoimentos/Aspas.png" alt="" srcset="">
@@ -602,7 +601,7 @@
                   </div>
                 </div>
                 <!-- // card dicas -->
-                <div class="col-md-4 d-flex swiper-slide">
+                <div class="col-lg-4 col-md-6 d-flex swiper-slide">
                   <div class="depoimento-card">
                     <div class="depoimento-card-conteudo">
                       <img src="assets/images/Depoimentos/Aspas.png" alt="" srcset="">
@@ -617,7 +616,7 @@
                   </div>
                 </div>
                 <!-- // card dicas -->
-                <div class="col-md-4 d-flex swiper-slide">
+                <div class="col-lg-4 col-md-6 d-flex swiper-slide">
                   <div class="depoimento-card">
                     <div class="depoimento-card-conteudo">
                       <img src="assets/images/Depoimentos/Aspas.png" alt="" srcset="">
@@ -632,7 +631,7 @@
                   </div>
                 </div>
                 <!-- // card dicas -->
-                <div class="col-md-4 d-flex swiper-slide">
+                <div class="col-lg-4 col-md-6 d-flex swiper-slide">
                   <div class="depoimento-card">
                     <div class="depoimento-card-conteudo">
                       <img src="assets/images/Depoimentos/Aspas.png" alt="" srcset="">
@@ -647,7 +646,7 @@
                   </div>
                 </div>
                 <!-- // card dicas -->
-                <div class="col-md-4 d-flex swiper-slide">
+                <div class="col-lg-4 col-md-6 d-flex swiper-slide">
                   <div class="depoimento-card">
                     <div class="depoimento-card-conteudo">
                       <img src="assets/images/Depoimentos/Aspas.png" alt="" srcset="">
@@ -662,7 +661,7 @@
                   </div>
                 </div>
                 <!-- // card dicas -->
-                <div class="col-md-4 d-flex swiper-slide">
+                <div class="col-lg-4 col-md-6 d-flex swiper-slide">
                   <div class="depoimento-card">
                     <div class="depoimento-card-conteudo">
                       <img src="assets/images/Depoimentos/Aspas.png" alt="" srcset="">
@@ -694,14 +693,14 @@
     <!-- // Contato -->
     <section class="contato gap-padrao">
       <img src="assets/images/Contato/Simbolo.png" id="simbolo" alt="" srcset="">
-      <div class="container-fluid">
+      <div class="container">
+        <div class="titulo invertido" data-aos-anchor-placement="top-center" data-aos="fade-up"
+          data-aos-duration="2000">
+          <h3>Solicite um</h3>
+          <h1>Orçamento</h1>
+        </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="titulo invertido" data-aos-anchor-placement="top-center" data-aos="fade-up"
-              data-aos-duration="2000">
-              <h3>Solicite um</h3>
-              <h1>Orçamento</h1>
-            </div>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Aenean quis lacus ut ligula ornare lacinia. Nulla blandit
@@ -714,7 +713,7 @@
               aliquet fringilla magna in, pretium pharetra mauris.
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 wrapper-form">
             <form action="" method="post">
               <div class="form-group">
                 <input type="text" class="form-control" id="nome" placeholder="Nome">
@@ -757,7 +756,7 @@
           <ul>
             <li><a href=""><img src="assets/images/Rodape/telefone-simbolo.png" alt="Simbolo de telefone"
                   srcset="">(31)98701-7542</a></li>
-            <li><a href=""><img src="assets/images/Rodape/telefone-simbolo.png"
+            <li><a href=""><img src="assets/images/Rodape/whatsapp-simbolo.png"
                   alt="Simbolo do Whatsapp">(31)98701-7542</a></li>
             <li><a href=""><img src="assets/images/Rodape/email-simbolo.png"
                   alt="Simbolo de email">atendimento@rogeriomatoso.com.br</a></li>
@@ -771,10 +770,11 @@
   </footer>
   <!-- Back-end Essa barra só deve ser exibida na home, nas internas deve ser removida -->
   <div class="row barra-footer">
-    <div class="col-md-4" id="privacidade-wrapper">
-      <a href="">Politica de privacidade</a>
+    <div class="container">
+      <div id="privacidade-wrapper">
+        <a href="">Politica de privacidade</a>
+      </div>
     </div>
-    <div class="col-md-8"></div>
   </div>
 
   <script src="assets/js/jquery-3.5.1.min.js"></script>
