Ultimos detalhes no footer e outros

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                 <textarea class="form-control" id="mensagem" rows="3" placeholder="Mensagem"></textarea>
               </div>
               <div class="btn-wrapper">
-                <button type="submit">SAIBA MAIS</button>
+                <input type="submit" value="SAIBA MAIS">
               </div>
             </form>
           </div>
